Expose API method to remove existing peer
